--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Soares Pinturas | Pintura de Alto Padrão em Uberlândia</title>
+<title>Efeito Cimento Queimado | Soares Pinturas em Uberlândia</title>
 
 <!-- Fonts Google -->
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans&display=swap" rel="stylesheet" />
@@ -13,27 +13,27 @@
   * { margin: 0; padding: 0; box-sizing: border-box; }
   body {
     font-family: 'Open Sans', sans-serif;
-    background: #f9fafb;
+    background: #f5f5f5;
     color: #333;
     line-height: 1.6;
   }
-  a { color: #001F3F; text-decoration: none; transition: color 0.3s ease; }
-  a:hover { color: #003366; }
+  a { color: #444; text-decoration: none; transition: color 0.3s ease; }
+  a:hover { color: #222; }
   .container { max-width: 1100px; margin: 0 auto; padding: 40px 20px; }
 
   /* Header */
   header {
-    background: #001F3F;
+    background: linear-gradient(135deg, #5c5c5c, #2f2f2f);
     color: white;
     padding: 70px 20px 80px;
     text-align: center;
     border-radius: 0 0 25px 25px;
-    box-shadow: 0 6px 25px rgba(0, 31, 63, 0.4);
+    box-shadow: 0 6px 25px rgba(0,0,0,0.4);
   }
   header h1 {
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
-    font-size: 3rem;
+    font-size: 2.8rem;
     margin-bottom: 20px;
   }
   header p {
@@ -42,23 +42,21 @@
     margin: 0 auto 40px;
     font-weight: 500;
   }
-  .btn-primary, .btn-instagram {
+  .btn-primary, .btn-whatsapp {
     font-weight: 700;
     padding: 18px 48px;
     font-size: 1.2rem;
     border-radius: 35px;
     border: none;
     cursor: pointer;
-    box-shadow: 0 6px 18px rgba(0, 31, 63, 0.3);
+    box-shadow: 0 6px 18px rgba(0,0,0,0.3);
     transition: background-color 0.3s ease, color 0.3s ease;
     display: inline-block;
     margin: 8px 12px 0 12px;
     text-align: center;
   }
-  .btn-primary { background: white; color: #001F3F; }
-  .btn-primary:hover { background: #003366; color: white; }
-  .btn-instagram { background: #E4405F; color: white; }
-  .btn-instagram:hover { background: #b52f46; }
+  .btn-whatsapp { background: #25d366; color: white; }
+  .btn-whatsapp:hover { background: #1ea955; }
 
   /* About */
   .about {
@@ -67,18 +65,18 @@
     border-radius: 25px;
     max-width: 900px;
     margin: -100px auto 70px;
-    box-shadow: 0 8px 30px rgba(0, 31, 63, 0.15);
+    box-shadow: 0 8px 30px rgba(0,0,0,0.15);
     text-align: center;
   }
   .about h2 {
     font-family: 'Montserrat', sans-serif;
     font-size: 2.3rem;
-    color: #001F3F;
+    color: #333;
     margin-bottom: 20px;
   }
   .about p {
     font-size: 1.15rem;
-    color: #444;
+    color: #555;
     max-width: 700px;
     margin: 0 auto;
     line-height: 1.7;
@@ -89,7 +87,7 @@
   .services h2 {
     font-family: 'Montserrat', sans-serif;
     font-size: 2.1rem;
-    color: #001F3F;
+    color: #333;
     margin-bottom: 40px;
     text-align: center;
   }
@@ -103,10 +101,10 @@
     background: white;
     border-radius: 20px;
     padding: 30px 25px;
-    box-shadow: 0 6px 20px rgba(0, 31, 63, 0.1);
+    box-shadow: 0 6px 20px rgba(0,0,0,0.1);
     font-weight: 600;
     font-size: 1.1rem;
-    color: #001F3F;
+    color: #333;
     position: relative;
     padding-left: 50px;
   }
@@ -117,41 +115,8 @@
     top: 50%;
     transform: translateY(-50%);
     font-size: 1.6rem;
-    color: #001F3F;
+    color: #555;
   }
-
-  /* Process */
-  .process {
-    background: white;
-    max-width: 900px;
-    margin: 0 auto 80px;
-    border-radius: 25px;
-    padding: 50px 40px;
-    box-shadow: 0 8px 30px rgba(0, 31, 63, 0.15);
-  }
-  .process h2 {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 2rem;
-    color: #001F3F;
-    margin-bottom: 40px;
-    text-align: center;
-  }
-  .steps {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    gap: 40px;
-  }
-  .step {
-    flex: 1 1 160px;
-    background: #e6f0f3;
-    border-radius: 20px;
-    padding: 30px 25px;
-    text-align: center;
-    font-weight: 600;
-    color: #001F3F;
-  }
-  .step-number { font-size: 2.5rem; margin-bottom: 15px; }
 
   /* Benefits */
   .benefits {
@@ -165,9 +130,9 @@
     background: white;
     padding: 35px 30px;
     border-radius: 25px;
-    box-shadow: 0 6px 25px rgba(0, 31, 63, 0.12);
+    box-shadow: 0 6px 25px rgba(0,0,0,0.12);
     font-weight: 700;
-    color: #001F3F;
+    color: #333;
     text-align: center;
   }
 
@@ -178,13 +143,13 @@
     margin: 0 auto 80px;
     border-radius: 25px;
     padding: 50px 40px;
-    box-shadow: 0 8px 30px rgba(0, 31, 63, 0.15);
+    box-shadow: 0 8px 30px rgba(0,0,0,0.15);
     text-align: center;
   }
   .contact h2 {
     font-family: 'Montserrat', sans-serif;
     font-size: 2rem;
-    color: #001F3F;
+    color: #333;
     margin-bottom: 40px;
   }
 
@@ -196,64 +161,49 @@
     color: #555;
     border-top: 1px solid #ddd;
   }
-  footer a { color: #001F3F; font-weight: 700; }
-  footer a:hover { color: #003366; }
+  footer a { color: #333; font-weight: 700; }
+  footer a:hover { color: #000; }
 </style>
 </head>
 <body>
 
 <header>
   <div class="container">
-    <h1>Soares Pinturas - Pintura de Alto Padrão em Uberlândia</h1>
-    <p>Transformamos ambientes com acabamento impecável, durabilidade e beleza que impressionam.</p>
-    <a href="https://wa.me/5534999202880" target="_blank" class="btn-primary">Solicite seu Orçamento Grátis</a>
-    <a href="https://www.instagram.com/soares_pinturas01" target="_blank" class="btn-instagram">Conheça nosso Portfólio no Instagram</a>
+    <h1>Efeito Cimento Queimado</h1>
+    <p>O acabamento moderno que transforma seu ambiente com estilo, durabilidade e sofisticação.</p>
+    <a href="https://wa.me/5534999202880?text=Ol%C3%A1%21%20Quero%20ver%20o%20portf%C3%B3lio%20de%20cimento%20queimado" target="_blank" class="btn-whatsapp">Fale no WhatsApp e Conheça o Portfólio</a>
   </div>
 </header>
 
 <section class="about">
-  <h2>Excelência e Profissionalismo em Cada Detalhe</h2>
-  <p>Na Soares Pinturas, oferecemos serviços especializados em pintura residencial e comercial, sempre com foco na qualidade e satisfação do cliente. Utilizamos materiais premium e técnicas modernas para garantir um acabamento superior que valoriza seu imóvel.</p>
+  <h2>Transforme seu Espaço</h2>
+  <p>O cimento queimado é tendência na decoração e combina perfeitamente com qualquer estilo: industrial, rústico ou moderno. Nossa aplicação garante uniformidade, resistência e acabamento impecável.</p>
 </section>
 
 <section class="services container">
-  <h2>Nossos Serviços</h2>
+  <h2>O que Oferecemos</h2>
   <ul class="service-list">
-    <li>Pintura residencial e comercial</li>
-    <li>Pintura de fachadas e áreas externas</li>
-    <li>Aplicação de texturas decorativas</li>
-    <li>Impermeabilização e proteção contra umidade</li>
-    <li>Tratamento e reparo de trincas e fissuras</li>
-    <li>Pintura em madeira e metais</li>
+    <li>Aplicação de cimento queimado liso ou com textura</li>
+    <li>Acabamento personalizado com cores e efeitos</li>
+    <li>Serviço rápido e sem sujeira</li>
+    <li>Aplicável em paredes, pisos e áreas externas</li>
   </ul>
 </section>
 
-<section class="process">
-  <h2>Nosso Processo</h2>
-  <div class="steps">
-    <div class="step"><div class="step-number">1</div><div class="step-desc">Solicite seu orçamento personalizado e gratuito</div></div>
-    <div class="step"><div class="step-number">2</div><div class="step-desc">Planejamento detalhado para o seu projeto</div></div>
-    <div class="step"><div class="step-number">3</div><div class="step-desc">Execução com profissionais qualificados</div></div>
-    <div class="step"><div class="step-number">4</div><div class="step-desc">Entrega com garantia e acompanhamento pós-serviço</div></div>
-  </div>
-</section>
-
 <section class="benefits container">
-  <div class="benefit-item">Acabamento impecável e durabilidade superior</div>
-  <div class="benefit-item">Materiais de alta qualidade e tecnologia avançada</div>
-  <div class="benefit-item">Equipe experiente e atendimento personalizado</div>
-  <div class="benefit-item">Compromisso com prazos e transparência</div>
+  <div class="benefit-item">Acabamento moderno e elegante</div>
+  <div class="benefit-item">Alta durabilidade e fácil manutenção</div>
+  <div class="benefit-item">Combina com qualquer decoração</div>
+  <div class="benefit-item">Aplicação rápida e limpa</div>
 </section>
 
 <section class="contact">
-  <h2>Solicite seu Orçamento</h2>
-  <a href="https://wa.me/5534999202880" target="_blank" class="btn-primary" style="width:100%; display:block; margin-bottom:20px;">Enviar mensagem no WhatsApp</a>
-  <a href="https://www.instagram.com/soares_pinturas01" target="_blank" class="btn-instagram" style="width:100%; display:block;">Ver Portfólio no Instagram</a>
+  <h2>Veja Nosso Portfólio no WhatsApp</h2>
+  <a href="https://wa.me/5534999202880?text=Ol%C3%A1%21%20Quero%20ver%20o%20portf%C3%B3lio%20de%20cimento%20queimado" target="_blank" class="btn-whatsapp" style="width:100%; display:block;">Abrir Conversa no WhatsApp</a>
 </section>
 
 <footer>
   <p>Contato: <a href="tel:+5534999202880">+55 (34) 99920-2880</a> | WhatsApp: <a href="https://wa.me/5534999202880" target="_blank">Clique aqui</a></p>
-  <p>Siga-nos no Instagram: <a href="https://www.instagram.com/soares_pinturas01" target="_blank">@soares_pinturas01</a></p>
   <p>© 2025 Soares Pinturas - Todos os direitos reservados</p>
 </footer>
 
